--- a/pages/menu.html
+++ b/pages/menu.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/fonts/style.css" type="text/css" rel="stylesheet">
-    <link href="/css/menu.css" type="text/css" rel="stylesheet">
+    <link href="/sign-in-page/fonts/style.css" type="text/css" rel="stylesheet">
+    <link href="/sign-in-page/css/menu.css" type="text/css" rel="stylesheet">
     <title>Menu</title>
 </head>
 <body>
@@ -39,4 +39,5 @@
         });
     </script>
 </body>
+
 </html>
