--- a/pages/sign-in-1.html
+++ b/pages/sign-in-1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In 1</title>
-    <link href="/fonts/style.css" type="text/css" rel="stylesheet">
-    <link href="/css/sign-in-1.css" type="text/css" rel="stylesheet">
+    <link href="/sign-in-page/fonts/style.css" type="text/css" rel="stylesheet">
+    <link href="/sign-in-page/css/sign-in-1.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -102,4 +102,5 @@
         </p>
     </footer>
 </body>
+
 </html>
