--- a/pages/sign-in-2.html
+++ b/pages/sign-in-2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/fonts/style.css">
-    <link rel="stylesheet" href="/css/sign-in-2.css">
+    <link rel="stylesheet" href="/sign-in-page/fonts/style.css">
+    <link rel="stylesheet" href="/sign-in-page/css/sign-in-2.css">
     <title>Sign In</title>
 </head>
 <body>
@@ -103,4 +103,5 @@
         </p>
     </footer>
 </body>
+
 </html>
