--- a/pages/sign-in-1.html
+++ b/pages/sign-in-1.html
@@ -72,7 +72,7 @@
         <input type="text" placeholder="Email or Username">
     </div>
     <div class="continue-btn">
-        <a href="/pages/sign-in-2.html">Continue</a>
+        <a href="/sign-in-page/pages/sign-in-2.html">Continue</a>
     </div>
 
     <div class="or">
@@ -104,3 +104,4 @@
 </body>
 
 </html>
+
