--- a/pages/menu.html
+++ b/pages/menu.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="sign-up">
-        <p><a href="/pages/sign-in-1.html">Sign In</a> or <a href="#">Create Account</a></p>
+        <p><a href="/sign-in-page/pages/sign-in-1.html">Sign In</a> or <a href="#">Create Account</a></p>
     </div>
     <hr>
 
@@ -41,3 +41,4 @@
 </body>
 
 </html>
+
